--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "demux-eos": "^2.0.0",
     "kerberos": "^1.0.0",
     "mongodb": "^3.1.8",
-    "socket.io": "^2.1.1"
+    "socket.io": "^2.1.1",
+    "text-encoding": "^0.7.0"
   }
 }
